--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,4 @@ advent2024_setup_project_warnings(advent_2024_warnings)
 add_subdirectory(day01)
 add_subdirectory(day02)
 add_subdirectory(day03)
+add_subdirectory(day04)
